--- a/src/views/job-edit.ejs
+++ b/src/views/job-edit.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#41414C" />
-    <link rel="shortcut icon" href="/images/favicon.png" type="image/png" />
+    <link rel="shortcut icon" href="images/favicon.png" type="image/png" />
     <title>JobsCalc</title>
 
     <link rel="stylesheet" href="/styles/main.css" />
@@ -27,10 +27,16 @@
     
   </head>
   <body id="page-job-edit">
+    
     <%- include('parts/page-header', { title: 'Editar Job'}) %>
 
     <div class="container flex animate-up delay-2">
-        <form id="form-job">
+
+""
+        <form id="form-job" 
+        method="post"
+        action="/job/<%= job.id %>">
+
           <fieldset>
             <legend>Dados do Job</legend>
             <div class="separator light"></div>
@@ -41,7 +47,7 @@
                 type="text" 
                 id="name" 
                 name="name"
-                value="Pizzaria Guloso"
+                value="<%= job.name %> "
               />
             </div>
 
@@ -54,7 +60,7 @@
                   step="0.1" 
                   id="daily-hours" 
                   name="daily-hours"
-                  value="2"/>
+                  value="<%= job["daily-hours"] %>"/>
               </div>
 
               <div class="input-wrapper">
@@ -64,7 +70,7 @@
                   type="number"
                   id="total-hours" 
                   name="total-hours"
-                  value="40" />
+                  value="<%= job["total-hours"] %>" />
               </div>
             </div>
           </fieldset>
@@ -74,7 +80,7 @@
       <aside class="card">
         <img src="/images/money-color.svg" alt="Imagem de Dinheiro">
         <p>
-          O valor do projeto ficou em <strong>R$ 4576,00</strong>
+          O valor do projeto ficou em <strong>R$ <%= job.budget.toFixed(2).replace(".", ",") %> </strong>
         </p>
         <div class="button-group">
           <button 
@@ -103,7 +109,7 @@
         <h3>Excluir Job</h3>
         <p>Quer mesmo excluir esse job? <br/>
         Ele será apagado para sempre.  
-        <p>
+        </p>
         <footer>
           <a 
             class="button gray" 
@@ -116,7 +122,7 @@
       </div>
       <form 
         method="post" 
-        action="/job/delete/{JOBID}" 
+        action="/job/delete/<%= job.id %> " 
         id="delete-job"></form>
     </div>
     <!-- end modal-wrapper -->
