--- a/src/views/job.ejs
+++ b/src/views/job.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#41414C" />
-    <link rel="shortcut icon" href="/images/favicon.png" type="image/png" />
+    <link rel="shortcut icon" href="images/favicon.png" type="image/png" />
     <title>JobsCalc</title>
 
     <link rel="stylesheet" href="/styles/main.css" />
@@ -24,11 +24,16 @@
     
   </head>
   <body id="page-job">
-    <%- include('parts/page-header', { title: 'Adicionar Novo Job'}) %>
+    
+    <%- include('parts/page-header', { title: 'Adicionar novo job'}) %>
 
     <div class="container flex animate-up delay-2">
       <main>
-        <form id="form-job">
+        
+        <form id="form-job" 
+          method="post" 
+          action="/job">
+        
           <fieldset>
             <legend>Dados do Job</legend>
             <div class="separator light"></div>
